# stele

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
docs/: stele-how-it-works-v0_1.html  stele-how-it-works-v0_1.md  stele-mount-contract-v0_1.md
examples/: README.md  docker-compose.yml  generate_env.py
examples/reference_app/: __init__.py  config.py  db.py  main.py
examples/reference_app/static/: app.js  index.html
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_totp_last_step.py
src/stele/: __init__.py  api.py  base.py  credentials.py  kek.py  models.py  person_totp.py  recovery.py  registry.py  session.py  webauthn.py
src/stele/migrations/: env.py
src/stele/migrations/versions/: 0001_baseline.py  0002_totp_last_step.py
tests/: conftest.py  test_login_challenge.py  test_pre_publication_hardening.py  test_primitives.py  test_reference_app_csrf.py  test_roundtrip.py  test_smoke.py  test_step_up.py  test_uv_policy.py
