[project]
name = "stele"
version = "0.1.0"
description = "Stele — a standalone identity & authentication substrate: principals (UUID identity), WebAuthn passkeys, TOTP, and recovery codes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "DUNIN7 — Done In Seven LLC" }]

# Versions pinned (==) to exactly what loomworks-engine resolves at main fe7c3f1,
# per CR-2026-114 P7-1: the lift must not silently upgrade a dependency. webauthn
# (py_webauthn) is the load-bearing ceremony dep — its pin is exact by intent.
# (P7-3 / publishing may relax these to ranges; P7-1 is deliberately conservative.)
dependencies = [
    "sqlalchemy[asyncio]==2.0.49",  # ORM/Core + AsyncSession (pulls greenlet 3.4.0)
    "pydantic==2.13.0",             # the Principal view model (registry)
    "webauthn==2.7.1",              # py_webauthn — the WebAuthn ceremony engine
    "pyotp==2.9.0",                 # TOTP (person_totp)
    "bcrypt==5.0.0",                # recovery-code hashing (recovery)
    "cryptography==46.0.7",         # Fernet/MultiFernet — KEK-direct totp_secret + session
    "asyncpg==0.31.0",              # async PostgreSQL driver (the migration + runtime target)
    "alembic==1.18.4",              # the independently-runnable migration set
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stele"]
