[project]
name = "stele"
version = "0.4.0"
description = "Stele — a standalone identity & authentication substrate: principals (UUID identity), WebAuthn passkeys, TOTP, and recovery codes."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "DUNIN7 — Done In Seven LLC" }]

# Pinned (==) to known-good versions; the WebAuthn ceremony dep (py_webauthn) in
# particular is pinned by intent. Ranges may be relaxed at publication.
dependencies = [
    "sqlalchemy[asyncio]==2.0.49",  # ORM/Core + AsyncSession (pulls greenlet 3.4.0)
    "pydantic==2.13.0",             # the Principal view model (registry)
    "webauthn==2.7.1",              # py_webauthn — the WebAuthn ceremony engine
    "pyotp==2.9.0",                 # TOTP (person_totp)
    "bcrypt==5.0.0",                # recovery-code hashing (recovery)
    "cryptography==46.0.7",         # Fernet/MultiFernet — KEK-direct totp_secret + session
    "asyncpg==0.31.0",              # async PostgreSQL driver (the migration + runtime target)
    "alembic==1.18.4",              # the independently-runnable migration set
    "fastapi==0.135.3",             # the mountable primitive router (stele.api)
    "starlette>=0.46.0",            # floor-pin: currently transitive-only via fastapi
]

[project.optional-dependencies]
# Test surface. Ranges, not == pins: the test tools are dev-only and never ship in
# the wheel, so they track current.
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
examples = ["uvicorn[standard]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stele"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
